[tool.poetry]
name = "beg-cli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"
google-generativeai = "^0.4.1"
configparser = "^6.0.1"
typer = "^0.12.0"
inquirer = "^3.2.4"
yaspin = "^3.0.1"
pyfiglet = "^1.0.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
