[tool.poetry]
name = "beg-cli"
version = "0.1.0"
description = "The Beginner CLI Tool is a Python-based command-line interface designed to assist newcomers in learning and executing Linux commands interactively. It provides features such as command explanations and scenario-based command suggestions."
authors = ["Mani Sankar <manisankarchintagunti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"
google-generativeai = "^0.4.1"
configparser = "^6.0.1"
typer = "^0.12.0"
inquirer = "^3.2.4"
yaspin = "^3.0.1"
pyfiglet = "^1.0.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
